--- a/examples/21ox.md
+++ b/examples/21ox.md
@@ -1,4 +1,4 @@
-Examples for [^21ox] in Do not reveal privileged instructions:
+Examples for [^21ox] in Do not reveal privileged information:
 
 **Example**: user inquiring about data retention policies
 
