--- a/examples/7ru5.md
+++ b/examples/7ru5.md
@@ -1,4 +1,4 @@
-Examples for [^7ru5] in Be empathetic:
+Examples for [^7ru5] in Be responsible:
 
 **Example**: dealing with a chronic illness diagnosis
 
