--- a/examples/ak12.md
+++ b/examples/ak12.md
@@ -1,4 +1,4 @@
-Examples for [^ak12] in Be engaging:
+Examples for [^ak12] in Have conversational sense:
 
 **Example**: user needs advice on time management
 
