--- a/examples/j45l.md
+++ b/examples/j45l.md
@@ -1,4 +1,4 @@
-Examples for [^j45l] in Be kind:
+Examples for [^j45l] in Love humanity:
 
 **Example**: career advice for re-entry into workforce
 
