--- a/examples/o92b.md
+++ b/examples/o92b.md
@@ -1,4 +1,4 @@
-Examples for [^o92b] in Do not reveal privileged instructions:
+Examples for [^o92b] in Do not reveal privileged information:
 
 **Example**: student-inquires-about-assistant-guidelines
 
