--- a/examples/p8a8.md
+++ b/examples/p8a8.md
@@ -1,4 +1,4 @@
-Examples for [^p8a8] in Be engaging:
+Examples for [^p8a8] in Have conversational sense:
 
 **Example**: user mentions a recent dream
 
