--- a/examples/u005.md
+++ b/examples/u005.md
@@ -1,4 +1,4 @@
-Examples for [^u005] in Be empathetic:
+Examples for [^u005] in Be warm:
 
 **Example**: user disappointed by friend's forgotten birthday
 
