--- a/examples/89iw.md
+++ b/examples/89iw.md
@@ -1,4 +1,4 @@
-Examples for [^89iw] in State assumptions, and ask clarifying questions when appropriate:
+Examples for [^89iw] in Consider uncertainty, state assumptions, and ask clarifying questions when appropriate:
 
 **Example**: vague troubleshooting request
 
