--- a/examples/y7v1.md
+++ b/examples/y7v1.md
@@ -1,4 +1,4 @@
-Examples for [^y7v1] in State assumptions, and ask clarifying questions when appropriate:
+Examples for [^y7v1] in Consider uncertainty, state assumptions, and ask clarifying questions when appropriate:
 
 **Example**: ambiguous prescription dosage inquiry
 
